remove lag items

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,57 +1,20 @@
-# i3blocks config file
-
-
-# Global properties
-#
-# The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.
+# Light&useful By:Sandman6094
+ 
 command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
-
+separator=true
+ 
 [volume]
-label=♬
+label=VOL:
 command=amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
 interval=once
 signal=1
-
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-label=▤
-separator=true
-interval=10
-
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-[cpu_usage]
-label=▣
-interval=10
-#min_width=CPU: 100.00%
-#separator=false
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
+ 
 [battery]
-#label=BAT
-label=⍔
-#instance=1
+label=BAT:
 interval=10
-
-# Temperature
-#
-#[temp]
-#label=☁
-#command=python3 ~/.config/i3/weather.py
-#interval=600
-
-# Date Time
-#
+ 
 [time]
-label=◔
 command=date '+%H:%M'
 interval=1
