--- a/config
+++ b/config
@@ -63,7 +63,7 @@ mode "resize" {
         bindsym Down resize grow height 5 px or 5 ppt
         bindsym Up resize shrink height 5 px or 5 ppt
         bindsym Right resize grow width 5 px or 5 ppt
- 
+ 	bindsym Escape mode "default"
         bindsym Return mode "default"
 }
 bindsym $mod+r mode "resize"
