--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,20 +1,20 @@
 # Light&useful By:Sandman6094
- 
+
 command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 separator=true
- 
-[volume]
-label=VOL:
-command=amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
+
+[batterybar]
+command=~/.config/batterybar 
+interval=5
+markup=pango
+
+[volumebar]
+command=~/.config/vulume
 interval=once
 signal=1
- 
-[battery]
-label=BAT:
-interval=10
- 
-[time]
+
+[timer]
 command=date '+%H:%M'
 interval=1
