--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -11,9 +11,9 @@ interval=5
 markup=pango
 
 [volumebar]
-command=~/.config/vulume
+command=python /home/sand/.config/volume.py
 interval=once
-signal=1
+signal=2
 
 [timer]
 command=date '+%H:%M'
