--- a/config
+++ b/config
@@ -84,7 +84,7 @@ bar {
 # autostart
 exec_always compton -f --config ~/.compton.conf
 exec_always xfce4-power-manager
-exec_always nm-applet
+exec_always wicd-client -ta
 exec_always diodon
  
 # window style
