--- a/mpv.conf
+++ b/mpv.conf
@@ -1,16 +1,5 @@
-save-position-on-quit
-keep-open
-
-cache=yes
-cache-default=524288                
-cache-backbuffer=393216
-demuxer-max-bytes=402653184         
-
-vo=opengl:gamma-auto
-playcache=4096
-lang=zh,chi
-
+--no-keepaspect-window
+--profile=opengl-hq
+hwdec=auto
+save-position-on-quit=yes
 sub-codepage=enca:zh:utf8
-sub-auto=fuzzy
-sub-text-font-size=40
-sub-codepage=utf8:gb18030
